Fix the gap between title and major in the home module for mobile responsive

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -106,7 +106,7 @@
           font-weight: 300;
           font-size: 1.5rem;
           color: #EEECFF;
-          margin-top: -1.5rem;
+          margin-top: 0rem;
           text-align: center;
           span {
             font-weight: 700;
@@ -157,6 +157,5 @@
     }
     
   
-  }
-  
+  }  
 }
